add checkin tests into marvin tutorial